# grpc_membersip

./: README.md  apis.http
card/: Cargo.toml  Dockerfile
card/proto/: members.proto
card/src/: main.rs  service.rs
license/: Cargo.toml
license/proto/: members.proto
license/src/: lib.rs  main.rs  service.rs
member/proto/: members.proto
member/src/: entity.rs  handler.rs  main.rs  utils.rs
server/: Cargo.toml
server/proto/: members.proto
server/src/: main.rs  service.rs
