[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Moaz bin Mokhtar <moaz.mokhtar@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.7"
